Creacion de paginas e inicio

--- a/Views/Home/QuienesSomos.cshtml
+++ b/Views/Home/QuienesSomos.cshtml
@@ -1,55 +1,112 @@
 ﻿@{
     ViewData["Title"] = "Quienes somos";
 }
-<h1>
-    ¡Bienvenido a Almacén Los Yuyitos! Tu Tienda de Confianza en [Ubicación]
-</h1>
+<div class="py-5">
+    <h1 class="display-6 text-center">Queremos que conozcas el Almacén Los Yuyitos.</h1>
+    <p class="lead">
+        Te invitamos a explorar nuestro sitio web y visitar nuestra tienda física para descubrir todo lo que Almacén Los Yuyitos tiene para ofrecerte. Únete a nuestra creciente familia de clientes satisfechos y descubre por qué somos tu mejor opción para tus necesidades de compras diarias.
+    </p>
+</div>
 
-<p>
-    Somos un negocio de abastos fundado por la emprendedora señora Juanita. 
-    Nuestra misión es brindarte la mejor experiencia de compra con una amplia variedad de productos de alta calidad, 
-    desde alimentos perecederos y no perecederos hasta bebidas, artículos de aseo y productos de bazar. Con el esfuerzo y dedicación de la señora Juanita, 
-    hemos crecido exponencialmente en nuestro primer año, triplicando nuestro capital y nuestra oferta de productos.
-</p>
+<div class="mb-6 py-5">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img src="~/css/img/almacen_los_yuyitos.png" class="img-fluid rounded mx-auto d-flex" height="100%" width="100%">
+        </div>
 
-<h4>Nuestra Historia</h4>
-<p>
-    La historia de Almacén Los Yuyitos comenzó cuando la señora Juanita decidió emprender su propio negocio para ayudar en los gastos del hogar. 
-    Con determinación, solicitó un préstamo al Banco Estatal para hacer realidad su sueño. Gracias a su arduo trabajo y visión, 
-    hoy somos una tienda en crecimiento constante.
-</p>
+        <div class="col-md-8">
+            <div class="">
+                <div class="accordion accordion-flush" id="accordionFlushExample">
 
-<h4>Nuestra Ubicación Estratégica</h4>
-<p>
-    Estamos ubicados en una zona estratégica donde aún no se han establecido grandes supermercados. Esto significa que estamos aquí para servirte, ofreciendo productos de alta calidad y precios competitivos a la comunidad local. La señora Juanita ve un gran potencial en nuestra ubicación y planea expandir aún más nuestra oferta de productos para satisfacer todas tus necesidades.
-</p>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="true" aria-controls="flush-collapseOne">
+                                ¿Quienes somos?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                Somos un negocio de abastos fundado por la emprendedora señora Juanita.
+                                Nuestra misión es brindarte la mejor experiencia de compra con una amplia variedad de productos de alta calidad,
+                                desde alimentos perecederos y no perecederos hasta bebidas, artículos de aseo y productos de bazar. 
+                            </div>
+                        </div>
+                    </div>
 
-<h4>Nuestros Productos</h4>
-<p>
-    En Almacén Los Yuyitos, encontrarás una amplia gama de productos cuidadosamente seleccionados para ti y tu familia. Desde alimentos frescos y deliciosos hasta productos de uso diario, estamos comprometidos a proporcionarte todo lo que necesitas bajo un mismo techo.
-</p>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                Nuestra Historia
+                            </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                La historia de Almacén Los Yuyitos comenzó cuando la señora Juanita decidió emprender su propio negocio para ayudar en los gastos del hogar.
+                                Con determinación, solicitó un préstamo al Banco Estatal para hacer realidad su sueño. Gracias a su arduo trabajo y visión,
+                                hoy somos una tienda en crecimiento constante.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                Nuestros Productos
+                            </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                En Almacén Los Yuyitos, encontrarás una amplia gama de productos cuidadosamente seleccionados para ti y tu familia.
+                                Desde alimentos frescos y deliciosos hasta productos de uso diario, estamos comprometidos a proporcionarte todo lo que necesitas bajo un mismo
+                                techo.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row py-5">
+    <div class="col-6">
+        <h1 class="display-6 text-center">Nuestra Ubicación Estratégica</h1>
+        <p class="lead">
+            Estamos ubicados en una zona estratégica donde aún no se han establecido grandes supermercados.
+            Esto significa que estamos aquí para servirte, ofreciendo productos de alta calidad y precios competitivos a la comunidad local.
+            La señora Juanita ve un gran potencial en nuestra ubicación y planea expandir aún más nuestra oferta de productos para satisfacer todas
+            tus necesidades.
+        </p>
+    </div>
+    <div class="col-6">
+        <h1 class="display-6 text-center">¿Qué Nos Hace Diferentes?</h1>
+        <ul>
+            <li>
+                <p class="lead">
+                    Atención Personalizada: En Almacén Los Yuyitos, valoramos a nuestros clientes y brindamos una atención cercana y personalizada.
+                    Siempre estamos aquí para ayudarte y escuchar tus necesidades.
+                </p>
 
-<h4>¿Qué Nos Hace Diferentes?</h4>
-<ul>
-    <li>
-        Atención Personalizada: En Almacén Los Yuyitos, valoramos a nuestros clientes y brindamos una atención cercana y personalizada. Siempre estamos aquí para ayudarte y escuchar tus necesidades.
-    </li>
-    <li>
-        Variedad y Calidad: Nuestra creciente selección de productos garantiza que siempre encuentres lo que estás buscando, sin comprometer la calidad.
-    </li>
-    <li>
-        Precios Competitivos: Ofrecemos productos de alta calidad a precios que se adaptan a tu presupuesto.
-    </li>
-    <li>
-        Compromiso con la Comunidad: Somos parte activa de la comunidad y nos enorgullece contribuir al bienestar de nuestros vecinos.
-    </li>
-</ul>
+            </li>
+            <li>
+                <p class="lead">
+                    Variedad y Calidad: Nuestra creciente selección de productos garantiza que siempre encuentres lo que estás buscando, sin comprometer la
+                    calidad.
+                </p>
+                
+            </li>
+            <li>
+                <p class="lead">Precios Competitivos: Ofrecemos productos de alta calidad a precios que se adaptan a tu presupuesto.</p>
+                
+            </li>
+            <li>
+                <p class="lead">Compromiso con la Comunidad: Somos parte activa de la comunidad y nos enorgullece contribuir al bienestar de nuestros vecinos.</p>
+                
+            </li>
+        </ul>
+    </div>
 
-<h1>Únete a la Familia Los Yuyitos</h1>
-<p>
-    Te invitamos a explorar nuestro sitio web y visitar nuestra tienda física para descubrir todo lo que Almacén Los Yuyitos tiene para ofrecerte. Únete a nuestra creciente familia de clientes satisfechos y descubre por qué somos tu mejor opción para tus necesidades de compras diarias.
-</p>
-<h1>¡Gracias por elegirnos! Esperamos verte pronto en Almacén Los Yuyitos.</h1>
+</div>
+
+<h1 class="display-4 text-center py-5">¡Gracias por elegirnos! Esperamos verte pronto en Almacén Los Yuyitos.</h1>
 
 
 
