--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,12 +2,13 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Bienvenido</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center py-5">
+    <h1 class="display-4">¡Bienvenido a Almacén Los Yuyitos!</h1>
+    <h1 class="display-6">Tu Tienda de Confianza</h1>
 </div>
 
-<nav class="navbar sticky-top navbar-light bg-light px-3">
+<!--  nav de filtros  -->
+<nav class="navbar sticky-top navbar-light bg-white px-3">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Filtros</a>
 
